# ptb-starlette-starter

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  run.py
config/: config.py
config/locale/: am.py  en.py  fr.py  locale.py
migrations/: env.py
migrations/versions/: 5c1b0fbee8ea_initial_migration.py
persistence/: db.py  models.py
ptb/: custom_context.py  custom_updates.py  error_handler.py  handlers.py  helpers.py  post_init.py  tg_app.py
scripts/: get_webhook.py  set_webhook.py
stl/: routes.py  starlette_app.py
